[workspace]
members = ["crates/evm-lens-core", "crates/evm-lens", "crates/evm-lens-tracing"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/andyrobert3/evm-lens"
homepage = "https://github.com/andyroebrt3/evm-lens"
authors = ["Matthew Jacobus <alexandermatthew12@gmail.com>"]
keywords = ["ethereum", "evm", "bytecode", "disassembler", "blockchain"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Shared dependencies that both crates might use
hex = "0.4.3"
revm = { version = "=24.0.0", features = ["std", "asyncdb", "alloydb"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
color-eyre = "0.6"
# I/O module dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
# Minimal JSON-RPC dependencies for Ethereum integration  
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
# Use ethereum-types that's compatible with revm
ethereum-types = "0.14"
thiserror = "2.0.12"
alloy = { version = "1.0.0", features = ["full"] }
