[package]
name = "evm-lens-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fast EVM bytecode disassembler library"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
hex.workspace = true
revm.workspace = true