[package]
name = "evm-lens-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
revm.workspace = true
alloy.workspace = true
serde_json.workspace = true
serde.workspace = true