[package]
name = "evm-lens"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Colorful EVM bytecode disassembler CLI"

[dependencies]
colored.workspace = true
clap.workspace = true
color-eyre.workspace = true
hex.workspace = true
evm-lens-core = { version = "0.1.0", path = "../evm-lens-core" }