[package]
name = "evm-lens"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Colorful EVM bytecode disassembler CLI"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "evm-lens"
path = "src/main.rs"

[dependencies]
colored.workspace = true
clap.workspace = true
color-eyre.workspace = true
hex.workspace = true
evm-lens-core = { version = "0.1.0", path = "../evm-lens-core" }
# I/O module dependencies
tokio.workspace = true
serde.workspace = true
url.workspace = true
# Minimal JSON-RPC dependencies for Ethereum integration
reqwest.workspace = true
serde_json.workspace = true
ethereum-types.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
wiremock = "0.6"
tokio-test = "0.4"